# cliniq

./: ClinIQ_Architecture.docx  Dockerfile  LICENSE  README.md  cliniq_dev.db-shm  cliniq_dev.db-wal  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
cliniq/: __init__.py
cliniq/ai/: assistant.py
cliniq/analytics/: funnel.py  lag.py  snapshot.py  velocity.py
cliniq/api/: app.py  schemas.py
cliniq/api/routers/: auth.py  portfolio.py  sites.py  trials.py
cliniq/config/: security.py  settings.py
cliniq/dashboard/: app.py  cache.py  charts.py  data.py  design.py  wsgi.py
cliniq/db/: database.py  models.py  seeder.py
cliniq/ml/: deviation_classifier.py  risk_model.py
cliniq/rbac/: auth.py
tests/: conftest.py
tests/test_analytics/: test_analytics.py
tests/test_api/: test_api.py
tests/test_dashboard/: test_dashboard.py
tests/test_db/: test_models.py
tests/test_e2e/: test_hardening.py  test_security.py  test_smoke.py
tests/test_ml/: test_ml.py
